2004-09-11  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (pubkey_table): Added an alias entry for GCRY_PK_ELG_E.

2004-08-23  Moritz Schulte  <moritz@g10code.com>

	* ac.c: Do not include <assert.h>.
	* rndegd.c: Likewise.
	* sha1.c: Likewise.
	* rndunix.c: Likewise.
	* rndlinux.c: Likewise.
	* rmd160.c: Likewise.
	* md5.c: Likewise.
	* md4.c: Likewise.
	* cipher.c: Likewise.
	* crc.c: Likewise.
	* blowfish.c: Likewise.

	* pubkey.c (dummy_generate, dummy_check_secret_key)
	(dummy_encrypt, dummy_decrypt, dummy_sign, dummy_verify): Return
	err code GPG_ERR_NOT_IMPLEMENTED instead of aborting through
	log_bug().
	(dummy_get_nbits): Return 0 instead of aborting though log_bug().

2004-08-19  Werner Koch  <wk@g10code.de>

	* pubkey.c (sexp_data_to_mpi): Changed the zero random byte
	substituting code to actually do clever things.  Thanks to
	Matthias Urlichs for noting the implementation problem.

2004-08-09  Moritz Schulte  <moritz@g10code.com>

	* pubkey.c (gcry_pk_sign): Fixed memory leak; fix provided by
	Modestas Vainius.

2004-07-16  Werner Koch  <wk@gnupg.org>

	* rijndael.c (do_encrypt): Fix alignment problem.  Bugs found by
	Matthias Urlichs.
	(do_decrypt): Ditto.
	(keySched, keySched2): Use 2 macros along with unions in the key
	schedule context.

2004-07-14  Moritz Schulte  <moritz@g10code.com>

	* rsa.c (_gcry_rsa_decrypt): Don't forget to free "a".  Thanks to
	Nikos Mavroyanopoulos.

2004-05-09  Werner Koch  <wk@gnupg.org>

	* random.c (read_pool): Mix the PID in to better protect after a
	fork.

2004-07-04  Moritz Schulte  <moritz@g10code.com>

	* serpent.c: Use "u32_t" instead of "unsigned long", do not
	declare S-Box variables as "register".  Fixes failure on
	OpenBSD/sparc64, reported by Nikolay Sturm.

2004-05-07  Werner Koch  <wk@gnupg.org>

	* random.c (initialize): Factored out some code to ..
	(initialize_basics): .. new function.
	(_gcry_random_initialize): Just call initialize_basics unless the
	new arg FULL is set to TRUE.